fix preloading links on safari

--- a/assets/scss/core/_global.scss
+++ b/assets/scss/core/_global.scss
@@ -89,13 +89,6 @@ a {
 
     @include response-max($laptop-landscape) {
         outline: none;
-        -webkit-tap-highlight-color: transparent;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
     }
 }
 
